# Claude-Telemetry-Dashboard

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: github.rs  lib.rs  main.rs  model.rs  parser.rs  watcher.rs
src/components/: CommandsChart.tsx  CoreDashboard.tsx  FailuresTable.tsx  FlowDiagram.tsx  MetricCard.tsx  Sidebar.tsx  TokensChart.tsx  TopList.tsx
src/hooks/: useTelemetry.ts
src/lib/: issueStatus.test.ts  issueStatus.ts  pixelSprites.tsx
src/views/: IssuesView.tsx  PrLiveView.tsx  PushView.tsx  QaView.tsx  ReinoView.tsx  RunDetailView.tsx
