[package]
name = "claude-telemetry-dashboard"
version = "0.1.0"
description = "Live dashboard for Claude Code telemetry"
authors = ["Markel Alvarado"]
edition = "2021"

[lib]
name = "claude_telemetry_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
notify-debouncer-mini = "0.4"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
